# api

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  release.toml
.github/workflows/: general.yml  main.yml  release.yml
.sqlx/: query-06ccc928180e0f4927c174a43f336e0c6caf097a2d38e1ecf078d27fcb03d89e.json  query-576f3f359606f99036dd6c70d1c99b3315a18498f67b8421b0894cc302be500e.json  query-86678431f347cfec4b6645c9ea7bee80c387351be59fee44bb8fc021b2f7a5e0.json  query-e57f16661ed8f1563837cead6cce29ebb42ccb006780d253286b432a90ad3859.json
configuration/: base.yaml  local.yaml  production.yaml
scripts/: commit_msg.sh  init_db.sh  init_redis.sh  pre_commit.sh  setup_hooks.sh
src/: configuration.rs  main.rs  session_state.rs  startup.rs
src/authentication/: middleware.rs  password.rs
src/domain/users/: user.rs  user_email.rs  user_password.rs
src/routes/: mod.rs
src/routes/auth/: change_password.rs  login.rs  request_password_reset.rs  signup.rs  signup_activate.rs  signup_activate_resend.rs
tests/api/: helpers.rs
tests/api/auth/: change_password.rs  login.rs  request_password_reset.rs  signup.rs  signup_activate.rs  signup_activate_resend.rs
