[package]
name = "acid"
version = "0.0.1-alpha.14"
authors = ["acidarchive <dev@acidarchive.com>"]
description = "API for acidarchive.com"
license = "MIT"
documentation = "https://acidarchive.com/docs/api"
homepage = "https://acidarchive.com"
repository = "https://github.com/acidarchive/api"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.215"
config = { version = "0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4.38"
log = "0.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
thiserror = "2.0.3"
serde-aux = "4.5.0"
unicode-segmentation = "1.7.1"
validator = "0.19"
rand = { version = "0.8", features = ["std_rng"] }
tracing-actix-web = "0.7.14"
tracing-bunyan-formatter = "0.3.10"
anyhow = "1.0.93"
base64 = "0.22.1"
argon2 = { version = "0.6.0-pre.1", features = ["std"] }
serde_json = "1.0.73"
secrecy = { version = "0.8", features = ["serde"] }
fancy-regex = "0.14.0"
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "5", features = ["actix-web"]}
dotenvy = { version = "0.15.7" }
actix-session = { version = "0.10", features = ["redis-session-native-tls"] }

[dependencies.reqwest]
version = "0.12.9"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
once_cell = "1.20.2"
claims = "0.7"
quickcheck = "1.0.3"
quickcheck_macros = "1"
fake = "3.0.1"
wiremock = "0.6"
serde_json = "1.0.61"
linkify = "0.10.0"

